Stop mini cart dropdown visibility bug

--- a/mini-cart-component/miniCart.css
+++ b/mini-cart-component/miniCart.css
@@ -60,3 +60,17 @@
 	display:block;
 	width:100%;
 }
+
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
